force-app/main/default/objects/Bank_Data__c/fields/Account_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Type__c</fullName>
    <label>Account Holder Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>