force-app/main/default/objects/Bank_Data__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>