force-app/main/default/objects/Bank_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Account_Holder_Type__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Address__c</columns>
    <columns>Id_Type__c</columns>
    <columns>Income__c</columns>
    <columns>Occupation__c</columns>
    <columns>Birthdate__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>