force-app/main/default/objects/Bank_Data__c/listViews/IdentityQueue_Bank_Data.listView-meta.xml
<ListView>
    <fullName>IdentityQueue_Bank_Data</fullName>
    <filterScope>Queue</filterScope>
    <label>IdentityQueue</label>
    <queue>IdentityQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>